<resources>
    <string name="app_name">Araç Kasko Değer Listesi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kredi_hesapla">Kredi Hesapla</string>
    <string name="yine_de_hesapla">Yine de hesapla</string>
    <string name="arac_kasko_deger_listesi">Araç Kasko Değer Listesi</string>
    <string name="arac_detay">Araç Detay</string>
    <string name="marka_model_ve_yil_ile_arama_yapabilirsiz">Marka, model ve yıl ile arama yapabilirsiz…</string>
    <string name="_400_bin_tl_alti_araclar">400 bin TL Altı Araçlar</string>
    <string name="kredi_hesaplama">Kredi Hesaplama</string>
    <string name="model_yili">Model Yılı</string>
    <string name="arac_yil">Yıl</string>
    <string name="motor_gucu">Motor Gücü</string>
    <string name="marka">Marka</string>
    <string name="model">Model</string>
    <string name="home_page_kasko_degeri">Kasko Değeri: %s ₺</string>
    <string name="secili_arac">Seçili Araç:</string>
    <string name="hyundai_i20_2014_cvvt_go">Hyundai i20 2014 CVVT-GO…</string>
    <string name="arac_kasko_degeri">Araç Kasko Değeri:</string>
    <string name="kredi_tutar">Kredi Tutarı</string>
    <string name="vade_oran">Faiz Oranı</string>
    <string name="vade_suresi">Vade</string>
    <string name="toplam_borc">Toplam Borç</string>
    <string name="aylik_taksit_tutari">Aylık Taksit Tutarı</string>
    <string name="maksimum_kredi_tutar">Maksimum Kredi Tutarı:</string>
    <string name="maksimum_vade">Maksimum Vade :</string>
    <string name="low_price_text">400 Bin TL Araçlar</string>
    <string name="arac_alim_satim_rehberi">Araç Alım Satım Rehberi</string>
    <string name="kredi_detay_info_text">Detaylı bilgi için lütfen bankanızla görüşünüz.</string>
    <string name="kirk_sekiz_ay">48 Ay</string>
    <string name="otuz_alti_ay">36 Ay</string>
    <string name="yirmi_dort_ay">24 Ay</string>
    <string name="on_iki_ay">12 Ay</string>
    <string name="sifir_ay">0 Ay</string>
    <string name="sifir_tl">0</string>
    <string name="kredi_cikmaz">Kredi Çekilemez!</string>
    <string name="kredi_olanagi_yok">Üzgünüz, aracın kasko değeri 2.000.000 TL\'yi aştığı için kredi olanağı sunulamamaktadır.</string>
    <string name="ayl_k_taksit_tutar_ve_toplam_bor_oranlar_tamamen_tahmini_olup_kesin_bilgileri_bankan_zdan_renebilirsiniz">Aylık Taksit Tutarı ve Toplam Borç oranları tamamen tahmini olup, kesin bilgileri bankanızdan öğrenebilirsiniz.</string>
    <string name="tumunu_gor">Tümünü Gör</string>
    <string name="blog">Blog</string>
    <string name="arac_kasko_logosu">araç kasko logosu</string>
    <string name="bu_buton_ile_s_ralama_i_lemi_yapabilirsiniz">Bu buton ile sıralama işlemi yapabilirsiniz.</string>
    <string name="blog_image">blog image</string>
    <string name="expand_icon">expand icon</string>
    <string name="vehicle_image">vehicle image</string>
    <string name="tahmini_kredi_tutar">Tahmini Kredi Tutarı</string>
    <string name="yazi_arka_plan_rengi">yazı arka plan rengi</string>
    <string name="ta_t_kredi_i_lemlerinde_kredi_tutar_n_n_ta_t_tutar_na_oran_ve_azami_vadeler_a_daki_gibidir">Taşıt kredi işlemlerinde kredi tutarının, taşıt tutarına oranı ve azami vadeler aşıdaki gibidir.</string>
    <string name="kasko_de_eri">Kasko Değeri</string>
    <string name="max_oran">Max Oran</string>
    <string name="azami_vade">Azami Vade</string>
    <string name="_0_tl_400_000_tl">0 TL - 400.000 TL</string>
    <string name="_70">70%</string>
    <string name="_48_ay">48 Ay</string>
    <string name="_400_001_tl_800_000_tl">400.001 TL - 800.000 TL</string>
    <string name="_50">50%</string>
    <string name="_36_ay">36 Ay</string>
    <string name="_800_001_tl_1_200_000_tl">800.001 TL - 1.200.000 TL</string>
    <string name="_30">30%</string>
    <string name="_24_ay">24 Ay</string>
    <string name="_1_200_001_tl_2_000_000_tl">1.200.001 TL - 2.000.000 TL</string>
    <string name="_20">20%</string>
    <string name="_12_ay">12 Ay</string>
    <string name="_2_000_000_tl_ve_zeri">2.000.000 TL ve üzeri</string>
    <string name="_0">0%</string>
    <string name="_0_ay">0 Ay</string>
    <string name="kinci_el_ara_lar_i_in_en_fazla_9_ya_ndaki_ara_lara_kredi_kmaktad_r_ara_ya_bankadan_bankaya_de_i_iklik_g_stermektedir">İkinci el araçlar için en fazla 9 yaşındaki araçlara kredi çıkmaktadır. (Araç yaşı bankadan bankaya değişiklik göstermektedir.)</string>
    <string name="item_selected_icon">item selected icon</string>
    <string name="text_background_color">text background color</string>
    <string name="credit_amount_seekbar_description">Kredi miktarını ayarlamak</string>
    <string name="vade_seekbar_desc">Vade miktarını ayarlamak</string>
    <string name="ara_listesi">araç listesi</string>
    <string name="text_with_currency">%s ₺</string>
    <string name="text_currency">₺</string>
    <string name="format_vehicle_information">%s %s %s</string>
    <string name="default_interest_percent">4.0</string>
</resources>