<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_background_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/ta_t_kredi_i_lemlerinde_kredi_tutar_n_n_ta_t_tutar_na_oran_ve_azami_vadeler_a_daki_gibidir"
        android:textColor="@color/credit_calculator_info_title_color"
        android:textSize="@dimen/font_text_12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:orientation="horizontal"
        android:weightSum="8">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/kasko_de_eri"
            android:textColor="@color/secondary_color"
            android:textSize="@dimen/font_text_12sp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/max_oran"
            android:textColor="@color/secondary_color"
            android:textSize="@dimen/font_text_12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="2"
            android:fontFamily="@font/poppins_regular"
            android:gravity="end"
            android:text="@string/azami_vade"
            android:textColor="@color/secondary_color"
            android:textSize="@dimen/font_text_12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/credit_rates_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4dp"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:drawablePadding="@dimen/margin_8dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/kinci_el_ara_lar_i_in_en_fazla_9_ya_ndaki_ara_lara_kredi_kmaktad_r_ara_ya_bankadan_bankaya_de_i_iklik_g_stermektedir"
        android:textColor="@color/secondary_color"
        android:textSize="@dimen/font_text_12sp"
        app:drawableStartCompat="@drawable/ic_info_icon" />

</LinearLayout>