<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/line_color"
        android:backgroundTint="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:orientation="horizontal"
        android:weightSum="8">

        <TextView
            android:id="@+id/tv_credit_rate_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/credit_calculator_info_title_color"
            android:textSize="@dimen/font_text_12sp"
            tools:text="@string/_0_tl_400_000_tl" />


        <TextView
            android:id="@+id/tv_credit_max_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:textColor="@color/credit_calculator_info_title_color"
            android:textSize="@dimen/font_text_12sp"
            tools:text="@string/_70" />

        <TextView
            android:id="@+id/tv_credit_max_expiry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="2"
            android:fontFamily="@font/poppins_light"
            android:gravity="end"
            android:textColor="@color/credit_calculator_info_title_color"
            android:textSize="@dimen/font_text_12sp"
            tools:text="@string/_48_ay" />
    </LinearLayout>

</LinearLayout>