<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background_color"
        android:orientation="vertical"
        tools:context=".presentation.ui.detail.VehicleDetailFragment">

        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/vehicle_image"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_insure_app_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/vehicleTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_4dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_medium"
                android:maxLines="1"
                android:minLines="1"
                android:textColor="@color/secondary_color"
                android:textSize="@dimen/font_text_16sp"
                tools:text="Vehicle Title" />

            <TextView
                android:id="@+id/vehiclePriceText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_medium"
                android:gravity="end"
                android:maxLines="1"
                android:minLines="1"
                android:textColor="@color/secondary_color"
                android:textSize="@dimen/font_text_16sp"
                tools:text="Vehicle Price" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vehicleFeatureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:orientation="vertical">

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/creditVehicleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:visibility="visible"
            app:cardBackgroundColor="@color/primary_color"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/secondary_color"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/creditVehicleLayoutInner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/creditTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_12dp"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:maxLines="1"
                    android:minLines="1"
                    android:text="@string/tahmini_kredi_tutar"
                    android:textSize="@dimen/font_text_14sp"
                    app:layout_constraintEnd_toStartOf="@+id/creditCalculatorButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/creditCalculatorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_48dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/margin_12dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:background="@drawable/stroke_home_credit_button_background"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/margin_24dp"
                    android:text="@string/kredi_hesapla"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/creditInsurancePrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:layout_marginBottom="@dimen/margin_12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_medium"
                    android:maxLines="1"
                    android:minLines="1"
                    android:textSize="@dimen/font_text_14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/creditCalculatorButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/creditTitle"
                    tools:text="Kasko Değeri: 123124123tl" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creditVehicleLayoutInner" />

        <com.ersinberkealemdaroglu.arackaskodegerlistesi.presentation.customviews.VehicleInsuranceCreditRatesCustomView
            android:id="@+id/vehicleInsuranceCreditRatesCustomView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creditVehicleLayoutInner" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
